--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
@@ -25,6 +25,7 @@
 <link href="~/assets/plugins/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css"/>
 <link href="~/assets/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css" media="screen"/>
 <link href="~/assets/plugins/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css" media="screen"/>
+<link href="~/assets/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css" media="screen"/>
 <link rel="stylesheet" type="text/css" href="~/assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.css"/>
 
 <link href="~/content/jquery.readableXML.css?v=20150126" rel="stylesheet" type="text/css" media="screen"/>
