--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/FahrzeugdatenForm.cshtml
@@ -45,6 +45,7 @@
     }
 
     .kroschke-prime-etikette-form {
+        background: url(/ServicesMvc/images/kroschke-prime-etikette-bg.png);
         margin: 19px 0 20px 15px;
         padding: 15px 10px 10px 25px;
         border: 3px solid #C21823;
@@ -73,7 +74,7 @@
     .kroschke-prime-etikette-form .controls input {
         width: 170px !important;
         font-weight: bold;
-        border-color: #e9e9e9 !important;
+        border-color: #a0a0a0 !important;
         border-radius: 7px !important;
         background-color: ivory;
     }
