style rework satisfying customer wishes

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/OptionenDienstleistungenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/OptionenDienstleistungenForm.cshtml
@@ -116,6 +116,7 @@
                     newDiv.html($(".ms-container .ms-selection"));
                     newDiv.insertBefore(selectedItemsHeader);
 
+                    $(".dienstleistungen-wrapper").addClass("two-row");
                     $(".ms-container").addClass("two-row");
                 }
 
