--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -543,8 +543,14 @@ input.m-wrap, button.m-wrap, select.m-wrap, textarea.m-wrap{
 
 
 /* <2-zeilig> */
+.dienstleistungen-wrapper.two-row{
+    border: 1px solid #d6d6d6;
+    border-radius: 12px !important;
+    padding: 15px;
+}
+
 .ms-container.two-row {
-    width: 95%;
+    width: 100%;
 }
 .ms-container.two-row ul.ms-list {
     min-height: 40px;
@@ -569,7 +575,8 @@ input.m-wrap, button.m-wrap, select.m-wrap, textarea.m-wrap{
 .ms-container.two-row .ms-selection {
     margin-bottom: 20px;
 }
-.ms-container.two-row .ms-selectable span.dienstleistung-nicht-gewaehlt-checkbox {
+
+.ms-container.two-row .ms-selectable li span.dienstleistung-nicht-gewaehlt-checkbox {
     display: inline-block!important;
     table-layout: fixed;
     white-space: nowrap;
@@ -580,6 +587,10 @@ input.m-wrap, button.m-wrap, select.m-wrap, textarea.m-wrap{
     height: 18px!important;
     margin: 0 10px 0 5px!important;
 }
+.ms-container.two-row .ms-selectable li.ms-hover span.dienstleistung-nicht-gewaehlt-checkbox {
+    background-image: url(/ServicesMvc/_Themes/AH2015/images/checkbox-hover-halfcheck.png) !important;
+}
+
 .ms-container.two-row .ms-selection ul.ms-list li span{
     width: 277px;
 }
