--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Clever/Partial/SearchResult.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Clever/Partial/SearchResult.cshtml
@@ -1,66 +1,32 @@
 ﻿@model CkgDomainLogic.Autohaus.ViewModels.CleverViewModel
 
-<style>
-
-    .dd-handle {
-        cursor: auto !important; /* ggf. ändern, wenn onclick-Action benötigt */
-    }
-    
-    .form-horizontal .control-group {
-        margin-bottom: 10px;
-    }
-    
-    .validation-summary-errors {
-        margin-bottom: 0;
-    }
-    
-    .CleverSearchVehicleList {
-        min-height: 60px;
-    }
-    
-    span.kennzeichen {
-        padding-top: 0 !important;
-    }
-    
-    span.m-wrap {
-        margin-left: 15px;
-    }
-    
-</style>
+@{
+    var statusOk = ViewData.ModelState.IsValid;
+    var statusWarning = (!statusOk && Model.AnfrageTextFormatError);
+}
 
 <div class="portlet box light-grey position-relative">
 
-    <div class="form-horizontal padding-top-10">
+    <div class="form-horizontal label-width-200 padding-top-10 padding-bottom-1 @(statusOk ? "bg-color-ckg-palegreen" : (statusWarning ? "bg-color-ckg-paleyellow" : "bg-color-ckg-palered"))">
 
         <div class="CleverSearchStatusContainer">
-            @if (ViewData.ModelState.IsValid)
-            {
-                <div class='CleverSearchStatusIcon CleverSearchStatusOk'></div>
-            }
-            else if (Model.AnfrageTextFormatError)
-            {
-                <div class='CleverSearchStatusIcon CleverSearchStatusWarning'></div>
-            }
-            else
-            {
-                <div class='CleverSearchStatusIcon CleverSearchStatusError'></div>
-            }
+            <div class='CleverSearchStatusIcon @("CleverSearchStatus" + (statusOk ? "Ok" : (statusWarning ? "Warning" : "Error")))'></div>
         </div>
 
         @switch (Model.AnfrageOption)
         {
             case "EVB":
                 @Html.Partial("Partial/EvbResult", Model.EvbDaten)
-                break;
+           break;
 
             case "FIN":
             case "KENNZ":
                 @Html.Partial("Partial/VehicleResult", Model)
-                break;
+           break;
 
             case "IBAN":
                 @Html.Partial("Partial/IbanResult", Model.IbanDaten)
-                break;
+           break;
         }
 
         @Html.FormValidationSummary()
