Auslieferadressen nicht mehr als eigener Step, sondern auf Übersichtsseite pflegbar

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/AuslieferAdressenForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/AuslieferAdressenForm.cshtml
@@ -118,6 +118,11 @@
         </div>
 
         @*@Html.FormRequiredFieldsSummary()*@
+        
+        <div class="form-actions">
+            <button type="submit" class="btn green"><i class="icon-ok"></i> @Localize.Save</button>
+            <button type="button" class="btn" onclick="AjaxFormAuslieferAdressenClose();"> @Localize.Cancel</button>
+        </div>
 
         <script type="text/javascript">
 
