Impressum in allen Anwendungen aktualisiert.

--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/Impressum.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/Impressum.cshtml
@@ -9,10 +9,8 @@
     E-Mail:  info(at)dad.de<br/>
     Internet:  <a href="http://www.dad.de">http://www.dad.de</a><br/>
     <br/>
-    Vorsitzender der Geschäftsführung: <br/>
-    Christian Bartelheimer<br/>
-    Geschäftsführer: <br/>
-    Matthias Gauglitz, Philipp Kroschke, York Schmidt zur Nedden<br/>
+ Geschäftsführer: <br/>
+    Matthias Gauglitz, Philipp Kroschke (Sprecher der Geschäftsführung), York Schmidt zur Nedden<br/>
     Handelsregister Lübeck HRB 81927 AH <br/>
     Umsatzsteuer-Identifikationsnummer gemäß 
     § 27 a Umsatzsteuergesetz: DE114822102<br/>
