--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/ImpressumCkg.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/ImpressumCkg.cshtml
@@ -9,10 +9,8 @@
     E-Mail:  info(at)kroschke.de<br/>
     Internet:  <a href="http://www.kroschke.de">http://www.kroschke.de</a><br/>
     <br/>
-    Vorsitzender der Geschäftsführung: <br/>
-    Christian Bartelheimer<br/>
-    Geschäftsführer: <br/>
-    Matthias Gauglitz, Philipp Kroschke, York Schmidt zur Nedden<br/><br />
+ Geschäftsführer: <br/>
+    Matthias Gauglitz, Philipp Kroschke (Sprecher der Geschäftsführung), York Schmidt zur Nedden<br/><br />
 
     Registergericht: Amtsgericht Lübeck<br />
     HRB 9417 HL <br/><br />
@@ -24,7 +22,7 @@
     USt.-ID-Nr. DE811887896<br /><br />
 
     Verantwortlich im Sinne des Pressegesetzes:<br />
-    Christian Bartelheimer<br /><br />
+    Philipp Kroschke<br /><br />
 
     Haftungshinweis:<br />
     Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte
