--- a/inetpub/wwwroot/ZLDMobile/Views/Shared/Partial/_ImpressumPartial.cshtml
+++ b/inetpub/wwwroot/ZLDMobile/Views/Shared/Partial/_ImpressumPartial.cshtml
@@ -59,16 +59,9 @@
             </tr>
             <tr>
                 <td>
-                    <b>Vorsitzender der Geschäftsführung: </b>
-                <br />
-                    Christian Bartelheimer
-                </td>
-            </tr>
-            <tr>
-                <td>
                     <b>Geschäftsführer: </b>
                 <br />
-                    Matthias Gauglitz, Philipp Kroschke, York Schmidt zur Nedden
+                    Matthias Gauglitz, Philipp Kroschke (Sprecher der Geschäftsführung), York Schmidt zur Nedden
                 </td>
             </tr>
             <tr>
@@ -97,7 +90,7 @@
                 <td>
                     <b>Verantwortlich im Sinne des Pressegesetzes: </b>
                 <br />
-                    Christian Bartelheimer
+                    Philipp Kroschke
                 </td>
             </tr>
             <tr>
