--- a/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
+++ b/inetpub/wwwroot/ServicesMvc/Content/SiteAllLayouts.css
@@ -1419,3 +1419,45 @@ div.span-alert-placeholder .alert {
 .report-generator-wrapper li.persistable-form-dropdown-menu span.li-button span {
     display: inline-block;
 }
+
+
+.prime-control .control-label {
+    display: none;
+}
+.prime-control .controls {
+    margin-left: 0;
+}
+.prime-control label.checkbox {
+    font-weight: bold;
+}
+
+.prime-control div.checker span {
+    display: inline-block;
+    margin: 15px 0 0 0px!important;
+    background: url(/ServicesMvc/_Themes/AH2015/images/uniform/prime-checkbox-sprite.png) 0 0 no-repeat;
+    -webkit-font-smoothing: antialiased;
+    width: 30px;
+    height: 30px;
+}
+.prime-control div.checker span.checked {
+    background-position: 0px -30px;
+}
+.prime-control div.checker:hover span, 
+.prime-control label.checkbox:hover div.checker span:not(.checked) {
+    background-position: -30px 0px;
+}
+.prime-control div.checker:hover span.checked, 
+.prime-control label.checkbox:hover div.checker span.checked {
+    background-position: -30px -30px;
+}
+    
+.prime-control .prime-checkbox-image {
+    display: inline-block;
+    margin: 0 0 0 20px;
+    width: 200px;
+    height: 64px;
+    background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-prime-star.png) 0 0 no-repeat;
+}
+.prime-control label.checkbox.checked .prime-checkbox-image {
+    background: url(/ServicesMvc/_Themes/AH2015/images/kroschke-prime-flag.png) 0 0 no-repeat;
+}
