--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
@@ -10,7 +10,7 @@
 <link href="~/assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
 <link href="~/assets/plugins/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="~/assets/plugins/bootstrap-fileupload/bootstrap-fileupload.css" />
-<link href="~/assets/plugins/font-awesome/css/font-awesome.min.css?v=20150824" rel="stylesheet" type="text/css"/>
+<link href="~/assets/plugins/font-awesome/css/font-awesome.css?v=20160129_0830" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style-metro.css" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style.css?v=20150901_1334" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
